 * Registration errors now use proper error message style.

2006-12-14 cjg
 * Document upload no longer required by default (but a warning is still
    given).

2006-12-14 cjg
 * Removed unused secure template.

2006-12-14 tdb
 * Increased dependency for LibXML to 1.62 (segfault under 1.58* that I
    can't identify).
 * Modified BackCompatibility to set %INC correctly (now works with
    Apache::Reload!)

2006-12-14 cjg
 * Fixed odd situation when screen plugin forgot it's session
 * Added option to disable plugins by default and then de-disable them per
    repository.
 * Changed disable config option from {pluginid}->{disable} to 
    {pluginid}->{params}->{disable} and updated plugins.pl to reflect this.

2006-12-15 cjg 
 * Fixed buggy use of param() in component which classed with plugin param
    method.
 * Fixed security hole in PubMedID import.
 * Fixed issue with importing data via compound fields.

2006-12-15 cjg
 * Added DOI Import

2006-12-15 cjg
 * Fixed broken user link in render page.

2006-12-18 cjg
 * Moved stty in Compat::Term::ReadKey so that it's only called if needed,
    not at the start time, which was producing a warning in cron.

======================================================================
18/12/2006 - EPRINTS-3.0-RC-1
======================================================================

2006-12-21 tdb
 * Added url_name_value lookup script

2007-01-03 tmb
 * Added more examples for Request Copy configuration (eg. first author)

2007-01-03 tmb
 * Used File::Temp for temp files in Import screen

2007-01-03 tmb
 * Moved EFetch URL out of code
 * Added filter on PubMed ID - must be an int
 * Used LWP::Simple to get PubMed XML - not wget
 * Used File::Temp for temp file in PubMed ID import
 * Added extra mappings to PubMed XML import

2007-01-08 moj
 * Set userid to be optional
 * Previous commit: Changed userid to use user dataset rather than
    document.

2007-01-08
 * Added ApacheLog import plugin for access log data
